--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.799.0"
+    "aws-sdk": "^2.799.0",
+    "request": "^2.88.2"
   }
 }
